# semantic-bookmark-ai

./: .gitignore  LICENSE  README.md  ai_service.py  app.py  database.py  main.py  pyproject.toml  requirements.txt  schemas.py  scraper.py
