[project]
name = "bookmark-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "google-genai>=1.72.0",
    "lxml[html-clean]>=5.2.2",
    "newspaper3k>=0.2.8",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]
